fixed jumping tiles

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,6 @@
 .tile {
     border: 3px solid red;
     display: inline-block;
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    height: 100px;
 }
